fixed social alignment

--- a/mptindicators/static/scss/_mpt-main.scss
+++ b/mptindicators/static/scss/_mpt-main.scss
@@ -150,8 +150,10 @@ a:hover, a:focus {
 	}
 	.social-share ul {
 		display: table-cell;
-		vertical-align: middle;
 		height: 96px;
+		float: right;
+		margin: 0;
+		padding-top: 25px;
 	}
 	.indicator-num {
 		display: table-cell;
@@ -460,7 +462,9 @@ a:hover, a:focus {
 	li {
 		text-transform: uppercase;
 		font-size: 0.8rem;
+		margin-bottom: 5px;
 	}
+
 	.icon {
 		height: 32px;
 		display: table-cell;
@@ -906,7 +910,7 @@ dl.breakdown {
 	}
 }
 .fact-one {
-	top: 0;
+	top: 20px;
 	left: 0;
 	background: $clr-sec-blue-base;
 	width: 170px;
